@@ -52,6 +52,7 @@ static void copy_attrib_flags(dbref player, dbref target, ATTR *atr, int flags);
 
 extern int rhs_present;         /* from command.c */
 
+
 /** Rename something.
  * \verbatim
  * This implements @name.
@@ -64,73 +65,87 @@ void
 do_name(dbref player, const char *name, char *newname_)
 {
   dbref thing;
-  char *eon;                    /* End Of Name */
-  char *bon;                    /* Beginning of name */
   char *myenv[10];
   int i;
   char *newname;
+  char *alias = NULL;
 
   if ((thing = match_controlled(player, name)) == NOTHING)
     return;
 
-  newname = mush_strdup(trim_space_sep(newname_, ' '), "name.newname");
-  bon = newname;
-
   /* check for bad name */
-  if ((*newname == '\0') || strchr(newname, '[')) {
+  if ((*newname_ == '\0') || strchr(newname_, '[')) {
     notify(player, T("Give it what new name?"));
-    mush_free(newname, "name.newname");
     return;
   }
-  /* check for renaming a player */
-  if (IsPlayer(thing)) {
-    // If it has "s, it's surrounding a spaced name, likely. So bon
-    // is beginning of name.
-    // I'm going to cheat here and make it so
-    // @name me="foo"bar names somebody foo, since " is an invalid name.
-    if (*bon == '"') {
-      bon++;
-      eon = bon;
-      while (*eon && *eon != '"') {
-        eon++;
+  switch Typeof(thing) {
+    case TYPE_PLAYER:
+      switch (ok_object_name(newname_, player, thing, TYPE_PLAYER, &newname, &alias)) {
+        case 0:
+          notify(player, T("You can't give a player that name."));
+          return;
+        case OPAE_TOOMANY:
+          notify(player, T("Too many aliases."));
+          mush_free(newname, "name.newname");
+          return;
+        case OPAE_INVALID:
+          notify_format(player, T("'%s' is not a valid alias."), alias);
+          mush_free(newname, "name.newname");
+          mush_free(alias, "name.newname");
+          return;
       }
-      if (*eon) {
-        *eon = '\0';
+      break;
+    case TYPE_EXIT:
+      if (ok_object_name(newname_, player, thing, TYPE_EXIT, &newname, &alias) < 1) {
+        notify(player, T("That is not a reasonable name."));
+        if (newname)
+          mush_free(newname, "name.newname");
+        if (alias)
+          mush_free(alias, "name.newname");
+        return;
       }
-    }
-    if (!ok_player_name(bon, player, thing)) {
-      notify(player, T("You can't give a player that name."));
-      mush_free(newname, "name.newname");
+      break;
+    case TYPE_THING:
+    case TYPE_ROOM:
+      if (!ok_name(newname_)) {
+        notify(player, T("That is not a reasonable name."));
+        return;
+      }
+      mush_strdup(trim_space_sep(newname_, ' '), "name.newname");
+      break;
+    default:
+      /* Should never occur */
+      notify(player, T("I don't see that here."));
       return;
-    }
-    /* everything ok, notify */
-    do_log(LT_CONN, 0, 0, "Name change by %s(#%d) to %s",
-           Name(thing), thing, bon);
-    if (Suspect(thing))
-      flag_broadcast("WIZARD", 0,
-                     T("Broadcast: Suspect %s changed name to %s."),
-                     Name(thing), bon);
-    /* everything ok, we can fall through to change the name */
-  } else {
-    bon = newname;
-    if (!ok_name(newname)) {
-      notify(player, T("That is not a reasonable name."));
-      mush_free(newname, "name.newname");
-      return;
-    }
   }
 
-  /* everything ok, change the name */
+  /* Actually change it */
   myenv[0] = (char *) mush_malloc(BUFFER_LEN, "string");
   myenv[1] = (char *) mush_malloc(BUFFER_LEN, "string");
   mush_strncpy(myenv[0], Name(thing), BUFFER_LEN);
-  strcpy(myenv[1], bon);
+  strcpy(myenv[1], newname);
   for (i = 2; i < 10; i++)
     myenv[i] = NULL;
 
-  if (IsPlayer(thing))
-    reset_player_list(thing, Name(thing), NULL, bon, NULL);
-  set_name(thing, bon);
+  if (IsPlayer(thing)) {
+    do_log(LT_CONN, 0, 0, "Name change by %s(#%d) to %s",
+           Name(thing), thing, newname);
+    if (Suspect(thing))
+      flag_broadcast("WIZARD", 0,
+                     T("Broadcast: Suspect %s changed name to %s."),
+                     Name(thing), newname);
+    reset_player_list(thing, Name(thing), NULL, newname, NULL);
+  }
+  set_name(thing, newname);
+  if (alias) {
+    if (*alias == ALIAS_DELIMITER) {
+      do_set_atr(thing, "ALIAS", NULL, player, 0);
+    } else {
+      /* New alias to set */
+      do_set_atr(thing, "ALIAS", alias, player, 0);
+    }
+    mush_free(alias, "name.newname");
+  }
 
   queue_event(player, "OBJECT`RENAME", "%s,%s,%s",
               unparse_objid(thing), myenv[1], myenv[0]);
@@ -142,6 +157,7 @@ do_name(dbref player, const char *name, char *newname_)
   mush_free(newname, "name.newname");
   mush_free(myenv[0], "string");
   mush_free(myenv[1], "string");
+
 }
 
 /** Change an object's owner.
